# formula

./: .gitignore  README.md  asset-manifest.json  index.html  main.py  pyproject.toml
Package/: Manager.py
Project/: Manager.py
source/: package.json  tailwind.config.js
source/public/: index.html
source/src/: App.tsx
source/src/Components/: Hero.tsx
source/src/Pages/: Home.tsx
src/formula/: main.py
src/formulapm/: main.py
static/css/: main.9efcb099.chunk.css  main.9efcb099.chunk.css.map
static/js/: 2.0a35e860.chunk.js  2.0a35e860.chunk.js.map  2.a447fb5a.chunk.js  2.a447fb5a.chunk.js.map  2.ae758d14.chunk.js  2.ae758d14.chunk.js.map  3.582977f4.chunk.js  3.582977f4.chunk.js.map  3.caf21327.chunk.js  3.caf21327.chunk.js.map  main.4ee6e452.chunk.js  main.4ee6e452.chunk.js.map  main.9952a34f.chunk.js  main.9952a34f.chunk.js.map  main.c2d79c4d.chunk.js  main.c2d79c4d.chunk.js.map  runtime-main.3dee7a53.js  runtime-main.3dee7a53.js.map  runtime-main.85e26d95.js  runtime-main.85e26d95.js.map
