[tool.poetry]
name = "formula"
version = "0.0.1"
description = "Fortran Package Manager"
authors = ["Giulio De Matteis <giuliod35@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^0.17.0"
argparse = "^1.4.0"
PyYAML = "^5.4.1"
wget = "^3.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
formula = "formula.main:cli"
